--- a/avokago-app/package.json
+++ b/avokago-app/package.json
@@ -18,8 +18,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "tailwindcss": "3.4.17",
+    "autoprefixer": "^10",
+    "postcss": "^8",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "@eslint/eslintrc": "^3"
