--- a/avokago-app/package.json
+++ b/avokago-app/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "next": "15.4.4",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.9"
   },
   "devDependencies": {
     "typescript": "^5",
