--- a/avokago-app/package.json
+++ b/avokago-app/package.json
@@ -9,22 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.9",
+    "next": "15.4.4",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4",
-    "lucide-react": "^0.525.0",
-    "motion": "^12.23.9"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "3.4.17",
     "autoprefixer": "^10",
-    "postcss": "^8",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "3.4.17",
+    "typescript": "^5"
   }
 }
